// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword match snapshot after success of sendPasswordResetEmail 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo_light.png",
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#dff0d8",
            "borderColor": "#d6e9c6",
            "marginTop": 15,
            "padding": 10,
          }
        }
      >
        <FormattedText
          defaultMessage="If the account exists, a password reset email will be sent to:"
          id="password_send.link"
          style={
            Object {
              "color": "#3c763d",
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#3c763d",
              },
              Object {
                "fontWeight": "bold",
              },
            ]
          }
        >
          test@test.com
        </Text>
        <FormattedText
          defaultMessage="Please check your inbox."
          id="password_send.checkInbox"
          style={
            Array [
              Object {
                "color": "#3c763d",
              },
              Object {
                "paddingTop": 15,
              },
            ]
          }
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`ForgotPassword should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo_light.png",
          }
        }
      />
      <View>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 32,
                "textAlign": "center",
              },
              Object {
                "color": "#171717",
              },
              Object {
                "marginTop": 32,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          placeholderTextColor="#5c5c5c"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#dbdbdb",
                "color": "#171717",
              },
              Object {
                "borderWidth": 1,
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#1247b1",
              },
              Object {
                "backgroundColor": "#dbdbdb",
              },
              Object {},
            ]
          }
          disabled={true}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "color": "#5c5c5c",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`ForgotPassword should show dark background when user has dark color scheme set 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#171717",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo_dark.png",
          }
        }
      />
      <View>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 32,
                "textAlign": "center",
              },
              Object {
                "color": "#dbdbdb",
              },
              Object {
                "marginTop": 32,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          placeholderTextColor="#9b9b9b"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#9b9b9b",
                "color": "#dbdbdb",
              },
              Object {
                "borderWidth": 1,
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#399fff",
              },
              Object {
                "backgroundColor": "#2e2e2e",
              },
              Object {},
            ]
          }
          disabled={true}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#171717",
                },
                Object {
                  "color": "#9b9b9b",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`ForgotPassword should show light background when user has light color scheme set 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo_light.png",
          }
        }
      />
      <View>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 32,
                "textAlign": "center",
              },
              Object {
                "color": "#171717",
              },
              Object {
                "marginTop": 32,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          placeholderTextColor="#5c5c5c"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#dbdbdb",
                "color": "#171717",
              },
              Object {
                "borderWidth": 1,
              },
              Object {
                "marginBottom": 16,
              },
            ]
          }
          underlineColorAndroid="transparent"
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#1247b1",
              },
              Object {
                "backgroundColor": "#dbdbdb",
              },
              Object {},
            ]
          }
          disabled={true}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "color": "#5c5c5c",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;

exports[`ForgotPassword snapshot for error on failure of email regex 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <TouchableWithoutFeedback
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../dist/assets/images/logo_light.png",
          }
        }
      />
      <View>
        <FormattedText
          defaultMessage="To reset your password, enter the email address you used to sign up"
          id="password_send.description"
          style={
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "300",
                "lineHeight": 22,
                "marginBottom": 32,
                "textAlign": "center",
              },
              Object {
                "color": "#171717",
              },
              Object {
                "marginTop": 32,
              },
            ]
          }
        />
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          blurOnSubmit={false}
          disableFullscreenUI={true}
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Email"
          placeholderTextColor="#5c5c5c"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#dbdbdb",
                "color": "#171717",
              },
              Object {
                "borderWidth": 2,
              },
              Object {
                "borderColor": "#ff6461",
              },
              Object {},
            ]
          }
          underlineColorAndroid="transparent"
        />
        <Connect(ErrorText)
          error="Please enter a valid email address."
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#1247b1",
              },
              Object {
                "marginTop": 12,
              },
            ]
          }
          disabled={false}
          onPress={[Function]}
        >
          <FormattedText
            defaultMessage="Reset my password"
            id="password_send.reset"
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#ffffff",
                },
              ]
            }
          />
        </Button>
      </View>
    </View>
  </TouchableWithoutFeedback>
</View>
`;
